name changed in package.json

--- a/Server/package.json
+++ b/Server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "recipe-server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "Server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node Server.js"
   },
   "dependencies": {
     "@huggingface/inference": "^4.11.2",
